--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ ext {
 
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-openfeign')
+	compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
 }
